--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,7 @@
 .about img {
   width: 100%
 }
-.text p {
+p {
   color: rgb(255, 255, 255, 0.7);
   font-family: Arial, Helvetica, sans-serif;
-}
-.text h1 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
 }
